PlugIn Quote hinzugefügt

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -54,6 +54,11 @@ redactor_plugin_linkYForm_title = YForm
 redactor_plugin_lists_title = Listen
 redactor_plugin_ol_title = 1. geordnete Liste
 redactor_plugin_outdent_title = < Einzug verringern
+redactor_plugin_quote_cancel = Abbrechen
+redactor_plugin_quote_insert = Einfügen
+redactor_plugin_quote_label_author = Autor
+redactor_plugin_quote_label_cite = Referenz / Titel
+redactor_plugin_quote_label_text = Zitat
 redactor_plugin_pre_title = Code
 redactor_plugin_pre_tooltip = Code
 redactor_plugin_redo_title = Wiederherstellen
