PlugIn Style hinzugefügt

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -63,10 +63,17 @@ redactor_plugin_pre_title = Code
 redactor_plugin_pre_tooltip = Code
 redactor_plugin_redo_title = Wiederherstellen
 redactor_plugin_redo_tooltip = Wiederherstellen
-redactor_plugin_superscript_title = Sup
-redactor_plugin_superscript_tooltip = Hochgestellt
+redactor_plugin_style_title = Textstile
+redactor_plugin_style_code_title = Code
+redactor_plugin_style_mark_title = Markiert
+redactor_plugin_style_kbd_title = Tastatureingabe
+redactor_plugin_style_sub_title = Tiefgestellt
+redactor_plugin_style_sup_title = Hochgestellt
+redactor_plugin_style_var_title = Variable
 redactor_plugin_subscript_title = Sub
 redactor_plugin_subscript_tooltip = Tiefgestellt
+redactor_plugin_superscript_title = Sup
+redactor_plugin_superscript_tooltip = Hochgestellt
 redactor_plugin_ul_title = • ungeordnete Liste
 redactor_plugin_underline_title = U
 redactor_plugin_underline_tooltip = Unterstrichen
