Button : linkTelephone hinzugefügt

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -70,6 +70,11 @@ redactor_plugin_linkEmail_title = E-Mail-Adresse als Link einfügen
 redactor_plugin_linkEmail_tooltip = E-Mail-Adresse als Link einfügen
 redactor_plugin_linkInternal_title = Linkmap öffnen
 redactor_plugin_linkMedia_title = Medium verlinken
+redactor_plugin_linkTelephone_label_number = Telefonnummer
+redactor_plugin_linkTelephone_label_text = Text
+redactor_plugin_linkTelephone_notice_number = internationale Schreibweise (+4969123456789)
+redactor_plugin_linkTelephone_title = Telefonnummer als Link einfügen
+redactor_plugin_linkTelephone_tooltip = Telefonnummer als Link einfügen
 redactor_plugin_linkYForm_title = YForm
 redactor_plugin_lists_title = Listen
 redactor_plugin_ol_title = 1. geordnete Liste
