Button : cleaner (Formatierungen entfernen)

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -42,6 +42,8 @@ redactor_plugin_blockquote_title = Zitat
 redactor_plugin_blockquote_tooltip = Zitat
 redactor_plugin_bold_title = B
 redactor_plugin_bold_tooltip = Fett
+redactor_plugin_cleaner_title = Formatierungen entfernen
+redactor_plugin_cleaner_tooltip = Formatierungen entfernen
 redactor_plugin_deleted_title = S
 redactor_plugin_deleted_tooltip = Löschen
 redactor_plugin_h1_title = H1
