Button : Format hinzugefügt

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -46,6 +46,8 @@ redactor_plugin_cleaner_title = Formatierungen entfernen
 redactor_plugin_cleaner_tooltip = Formatierungen entfernen
 redactor_plugin_deleted_title = S
 redactor_plugin_deleted_tooltip = Löschen
+redactor_plugin_format_title = Format
+redactor_plugin_format_tooltip = Format
 redactor_plugin_h1_title = H1
 redactor_plugin_h1_tooltip = Überschrift 1
 redactor_plugin_h2_title = H2
