--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -44,6 +44,8 @@ redactor_plugin_bold_title = B
 redactor_plugin_bold_tooltip = Fett
 redactor_plugin_cleaner_title = Formatierungen entfernen
 redactor_plugin_cleaner_tooltip = Formatierungen entfernen
+redactor_plugin_clip_title = Clips
+redactor_plugin_clip_tooltip = Clips
 redactor_plugin_deleted_title = S
 redactor_plugin_deleted_tooltip = Löschen
 redactor_plugin_format_title = Format
