--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -4,6 +4,10 @@ redactor_error_save_profile = Profiles could not be created.
 
 redactor_help = Help
 
+redactor_clear_cache = Clear cache
+redactor_cache_deleted = Cache deleted
+
+
 redactor_profile = Profile
 redactor_profile_add = add
 redactor_profile_copy = copy
@@ -11,17 +15,155 @@ redactor_profile_edit = edit
 redactor_profile_description = Description
 redactor_profile_functions = Functions
 redactor_profile_max_height = Maximum height
+redactor_profile_message_copy_success = Profile was successfully duplicated.
 redactor_profile_min_height = Minimum height
 redactor_profile_name = Name
+redactor_profile_name_copy = Copy
 redactor_profile_no_results = No profiles found
+redactor_profile_plugin_counter = Show status bar
+redactor_profile_plugin_counter_notice = Adds a character and word counter.
+redactor_profile_plugin_limiter = Number of characters
+redactor_profile_plugin_limiter_notice = Limits the number of characters a user can enter.
 redactor_profile_plugins = Plugins
+redactor_profile_plugins_notice = Note plugins separated by commas
 redactor_profile_selector = Selector
 redactor_profiles = Profile
 
+redactor_plugin_cancel = Cancel
+redactor_plugin_edit = Edit
+redactor_plugin_insert = Add
+redactor_plugin_save = Save
+redactor_plugin_unlink = Remove link
 
+redactor_plugin_alignment_center_title = Align text centered
+redactor_plugin_alignment_left_title = Align text left
+redactor_plugin_alignment_justify_title = Justify
+redactor_plugin_alignment_right_title = Align text right
+redactor_plugin_alignment_title = Alignment
+redactor_plugin_blockquote_title = Quote
+redactor_plugin_blockquote_tooltip = Quote
 redactor_plugin_bold_title = B
 redactor_plugin_bold_tooltip = Bold
+redactor_plugin_cleaner_title = Remove formatting
+redactor_plugin_cleaner_tooltip = Remove formatting
+redactor_plugin_clip_title = Clips
+redactor_plugin_clip_tooltip = Clips
 redactor_plugin_deleted_title = S
-redactor_plugin_deleted_tooltip = Delete
+redactor_plugin_deleted_tooltip = Remove
+redactor_plugin_format_title = Format
+redactor_plugin_format_tooltip = Format
+redactor_plugin_h1_title = H1
+redactor_plugin_h1_tooltip = Heading 1
+redactor_plugin_h2_title = H2
+redactor_plugin_h2_tooltip = Heading 2
+redactor_plugin_h3_title = H3
+redactor_plugin_h3_tooltip = Heading 3
+redactor_plugin_h4_title = H4
+redactor_plugin_h4_tooltip = Heading 4
+redactor_plugin_h5_title = H5
+redactor_plugin_h5_tooltip = Heading 5
+redactor_plugin_h6_title = H6
+redactor_plugin_h6_tooltip = Heading 6
+redactor_plugin_hr_title = Horizontal rule
+redactor_plugin_image_title = Image
+redactor_plugin_indent_title = > Indent
 redactor_plugin_italic_title = I
 redactor_plugin_italic_tooltip = Italic
+redactor_plugin_link_title = Link
+redactor_plugin_link_insert = Insert link
+redactor_plugin_link_unlink = Remove link
+redactor_plugin_linkEmail_label_email = Email
+redactor_plugin_linkEmail_label_text = Text
+redactor_plugin_linkEmail_title = Insert email as link
+redactor_plugin_linkEmail_tooltip = Insert email as link
+redactor_plugin_linkInternal_title = Open linkmap
+redactor_plugin_linkMedia_title = link medium
+redactor_plugin_linkTelephone_label_number = Phone
+redactor_plugin_linkTelephone_label_text = Text
+redactor_plugin_linkTelephone_notice_number = International notation (+4969123456789)
+redactor_plugin_linkTelephone_title = Insert phone number as link
+redactor_plugin_linkTelephone_tooltip = Insert phone number as link
+redactor_plugin_linkYForm_title = YForm
+redactor_plugin_lists_title = Lists
+redactor_plugin_ol_title = 1. ordered List
+redactor_plugin_outdent_title = < Outdent
+redactor_plugin_quote_cancel = Cancel
+redactor_plugin_quote_insert = Insert
+redactor_plugin_quote_label_author = Author
+redactor_plugin_quote_label_cite = Reference
+redactor_plugin_quote_label_text = Quote
+redactor_plugin_pre_title = Code
+redactor_plugin_pre_tooltip = Code
+redactor_plugin_redo_title = Redo
+redactor_plugin_redo_tooltip = Redo
+redactor_plugin_style_title = Text styles
+redactor_plugin_style_code_title = Code
+redactor_plugin_style_mark_title = Marked
+redactor_plugin_style_kbd_title = Keyboard input
+redactor_plugin_style_sub_title = Subscript
+redactor_plugin_style_sup_title = Superscript
+redactor_plugin_style_var_title = Variable
+redactor_plugin_subscript_title = Sub
+redactor_plugin_subscript_tooltip = Subscript
+redactor_plugin_superscript_title = Sup
+redactor_plugin_superscript_tooltip = Superscript
+redactor_plugin_ul_title = • Unordered list
+redactor_plugin_underline_title = U
+redactor_plugin_underline_tooltip = Underlined
+redactor_plugin_undo_title = Undo
+redactor_plugin_undo_tooltip = Undo
+
+
+# Übersetzungen der PlugIns, die die direkt vom Vendor kommen
+# Anpassungen dieser Übersetzungen erfolgen in der install.php
+# Counter
+redactor_plugin_vendor_chars = Chars
+redactor_plugin_vendor_words = Words
+
+# Fontcolor
+redactor_plugin_vendor_fontcolor = Fontcolor
+redactor_plugin_vendor_text = Text
+redactor_plugin_vendor_highlight = Highlight
+
+# Fontfamily
+redactor_plugin_vendor_fontfamily = Font family
+redactor_plugin_vendor_remove_font_family = Remove font family
+
+# Fontsize
+redactor_plugin_vendor_size = Font size,
+redactor_plugin_vendor_remove_size = Remove font size
+
+# Fullscreen
+redactor_plugin_vendor_fullscreen = Fullscreen
+
+# Properties
+redactor_plugin_vendor_properties = Properties
+
+# Specialchars
+redactor_plugin_vendor_specialchars = Special Characters
+
+# Table
+redactor_plugin_vendor_table = Table
+redactor_plugin_vendor_insert_table = Insert table
+redactor_plugin_vendor_insert_row_above = Insert row above
+redactor_plugin_vendor_insert_row_below = Insert row below
+redactor_plugin_vendor_insert_column_left = Insert column left
+redactor_plugin_vendor_insert_column_right = Insert column right
+redactor_plugin_vendor_add_head = Add head
+redactor_plugin_vendor_delete_head = Delete head
+redactor_plugin_vendor_delete_column = Delete column
+redactor_plugin_vendor_delete_row = Delete row
+redactor_plugin_vendor_delete_table = Delete table
+
+# Text direction
+redactor_plugin_vendor_change_text_direction = Text direction
+redactor_plugin_vendor_left_to_right = Left to right
+redactor_plugin_vendor_right_to_left = Right to left
+
+# Video
+redactor_plugin_vendor_video = Video
+redactor_plugin_vendor_video_html_code = Video Embed Code or Youtube/Vimeo Link
+
+# Widget
+redactor_plugin_vendor_widget = Widget
+redactor_plugin_vendor_widget_html_code = Widget HTML Code
